--- a/tebonsma.web/index.html
+++ b/tebonsma.web/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tebonsma</title>
-  <link rel="stylesheet" href="index.css" />
-
+  <link rel="stylesheet" href="/index.css" />
 </head>
 <body>
   <header>
@@ -25,6 +24,7 @@
     <p>© 2025 Tebonsma</p>
   </footer>
 
-  <script type="module" src="../dist/main.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
