chore: update package.json to include Tailwind CSS and Vite plugin; remove unused main.ts file

--- a/tebonsma.web/index.html
+++ b/tebonsma.web/index.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tebonsma</title>
-  <link rel="stylesheet" href="/index.css" />
 </head>
 <body>
-  <header>
-    <h1>TEBONSMA</h1>
-  </header>
-
-  <main>
-    <h2>Velkommen!</h2>
-    <p>Nettstedet er under utvikling.</p>
-    <a href="mailto:post@tebonsma.no" class="btn">
-      Send oss en e-post
-    </a>
-  </main>
-
-  <footer>
-    <p>Kontakt: <a href="mailto:post@tebonsma.no">post@tebonsma.no</a></p>
-    <p>© 2025 Tebonsma</p>
-  </footer>
-
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
